# QT_BitShifter

./: CMakeLists.txt  README.md
src/: main.cpp
src/classes/bit_modifier/: bit_modifier.cpp  bit_modifier.hpp
src/classes/task_executor/: task_executor.cpp  task_executor.hpp
src/libs/file_extractor/: file_extractor.cpp  file_extractor.hpp
src/ui_elements/task_card/: task_card.cpp  task_card.hpp
src/ui_elements/task_creation_dialog/: task_creation_dialog.cpp  task_creation_dialog.hpp
